# enclave

./: .gitignore  0001-record-architecture-decisions.md  0002-on-prem-data-sovereign-desktop-app.md  0003-bundle-llama-server-sidecar.md  0004-compose-rag-with-per-department-lora.md  0005-postgresql-pgvector-single-datastore.md  0006-hybrid-retrieval-rrf-fusion.md  0007-embeddings-table-model-registry.md  0008-department-scoped-row-level-security.md  0009-denormalize-department-id.md  0010-async-document-ingestion.md  0011-defer-dormant-membership-policy-cleanup.md  CLAUDE.md  HANDOFF.md  README.md
db/: schema.sql
enclave/: .gitignore  Fix Tauri error.txt  index.html  package.json  vite.config.ts
enclave/migrations/: 001_extensions.sql  002_core_tables.sql  003_indexes.sql  004_rls.sql  005_role_alignment_and_columns.sql  006_embedding_models_is_active.sql  007_adapters_catalog_and_missing_columns.sql
enclave/scripts/: fetch-sidecar.ps1
enclave/src/: App.tsx  main.tsx
enclave/src-tauri/: Cargo.toml  tauri.conf.json
enclave/src-tauri/src/: lib.rs
enclave/src-tauri/src/commands/: admin.rs  auth.rs  documents.rs  mod.rs  query.rs
enclave/src-tauri/src/db/: mod.rs  rls.rs
enclave/src-tauri/src/ingest/: jobs.rs  mod.rs
enclave/src-tauri/src/llm/: adapters.rs  mod.rs
enclave/src-tauri/src/retrieval/: mod.rs  rrf.rs
enclave/src-tauri/tests/: rls_validation.rs
enclave/src/components/: Badge.tsx  Button.tsx  ErrorText.tsx  FormField.tsx  Spinner.tsx
enclave/src/contexts/: AuthContext.tsx
enclave/src/hooks/: useJobPoller.ts  useLlmStream.ts
(+5 files in other folders)
